Ejercicio 1 del tp resuelto

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <meta name="keywords" content="Javascript, programacion web, RollingCode, practica, html, css">
 </head>
 <body>
-    <script src="./js/Ejercicio1Extra.js"></script>    
+    <script src="./js/Ejercicio1.js"></script>    
 </body>
 </html>
