--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trabajo Práctico 4 - Javascript</title>
-    <meta name="description" content="Práctica de funciones, arrays, objetos - Javascript, RollingCode">
-    <meta name="author" content="Federico Javier Rueda Leal">
-    <meta name="keywords" content="Javascript, programacion web, RollingCode, practica, html, css">
-</head>
-<body>
-    <script src="./js/Ejercicio3Extra.js"></script>    
-</body>
+    <meta
+      name="description"
+      content="Práctica de funciones, arrays, objetos - Javascript, RollingCode"
+    />
+    <meta name="author" content="Federico Javier Rueda Leal" />
+    <meta
+      name="keywords"
+      content="Javascript, programacion web, RollingCode, practica, html, css"
+    />
+    <link rel="stylesheet" href="./css/style.css">
+  </head>
+  <body>
+    <script src="./js/Ejercicio4Extra.js"></script>
+  </body>
 </html>
